fixed no-wrap parent selector

--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -1606,7 +1606,7 @@ article.page {
 }
 
 .nowrap-parent {
-	> {
+	> * {
 		display: inline-block;
 	}
 }
